# Freeway-Traffic-Model

./: README.md
model/: pyproject.toml  trafic_lane_model.py
