[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["maciej-gorski <macgors@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9.5"
numpy = "^1.20.3"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
isort = "^5.8.0"


[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile="black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
